...
    >
      <Text
        accessibilityLabel={TEST_IDS.mainTitle}
        style={[styles.title, { color: theme.text }]}
        testID={TEST_IDS.mainTitle}
      >
        rn-bottom-sheet Example
      </Text>
      <Text
        accessibilityLabel={TEST_IDS.mainSummary}
        accessibilityValue={{
          text: `Sheet: ${
            navigationSheet.isOpen ? 'Open' : 'Closed'
...
        {contentBackgroundBlurStyle}
      </Text>
      <Button
        accessibilityLabel={TEST_IDS.openSheetButton}
        onPress={requestOpenSheet}
        testID={TEST_IDS.openSheetButton}
        title="Open Sheet"
      />
      <View style={styles.buttonSpacer} />
      <Button
        accessibilityLabel={TEST_IDS.toggleThemeButton}
        onPress={handleToggleTheme}
        testID={TEST_IDS.toggleThemeButton}
...
